[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://guns/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/hitman1_reload.png" type="Texture" id=3]
[ext_resource path="res://sprites/hitman1_stand.png" type="Texture" id=4]
[ext_resource path="res://sprites/hitman1_machine.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "reload",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.7964

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
walk_speed = 300
run_speed = 500
clips = 5
rounds = 8
Bullet = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Aim" type="Position2D" parent="." index="2"]

position = Vector2( 25, 10 )
_sections_unfolded = [ "Transform" ]

[node name="ReloadTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ShootingTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="BulletContainer" type="Node" parent="." index="5"]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]

[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]


